# restapi/operations/identity/get_user_urlbuilder.go
@@ -9,17 +9,23 @@ import (
 	"errors"
 	"net/url"
 	golangswaggerpaths "path"
+
+	"github.com/go-openapi/swag"
 )
 
-// LogoutURL generates an URL for the logout operation
-type LogoutURL struct {
+// GetUserURL generates an URL for the get user operation
+type GetUserURL struct {
+	ID int64
+
 	_basePath string
+	// avoid unkeyed usage
+	_ struct{}
 }
 
 // WithBasePath sets the base path for this url builder, only required when it's different from the
 // base path specified in the swagger spec.
 // When the value of the base path is an empty string
-func (o *LogoutURL) WithBasePath(bp string) *LogoutURL {
+func (o *GetUserURL) WithBasePath(bp string) *GetUserURL {
 	o.SetBasePath(bp)
 	return o
 }
@@ -27,15 +33,15 @@ func (o *LogoutURL) WithBasePath(bp string) *LogoutURL {
 // SetBasePath sets the base path for this url builder, only required when it's different from the
 // base path specified in the swagger spec.
 // When the value of the base path is an empty string
-func (o *LogoutURL) SetBasePath(bp string) {
+func (o *GetUserURL) SetBasePath(bp string) {
 	o._basePath = bp
 }
 
 // Build a url path and query string
-func (o *LogoutURL) Build() (*url.URL, error) {
+func (o *GetUserURL) Build() (*url.URL, error) {
 	var _result url.URL
 
-	var _path = "/user/logout"
+	var _path = "/user/get"
 
 	_basePath := o._basePath
 	if _basePath == "" {
@@ -43,11 +49,20 @@ func (o *LogoutURL) Build() (*url.URL, error) {
 	}
 	_result.Path = golangswaggerpaths.Join(_basePath, _path)
 
+	qs := make(url.Values)
+
+	idQ := swag.FormatInt64(o.ID)
+	if idQ != "" {
+		qs.Set("id", idQ)
+	}
+
+	_result.RawQuery = qs.Encode()
+
 	return &_result, nil
 }
 
 // Must is a helper function to panic when the url builder returns an error
-func (o *LogoutURL) Must(u *url.URL, err error) *url.URL {
+func (o *GetUserURL) Must(u *url.URL, err error) *url.URL {
 	if err != nil {
 		panic(err)
 	}
@@ -58,17 +73,17 @@ func (o *LogoutURL) Must(u *url.URL, err error) *url.URL {
 }
 
 // String returns the string representation of the path with query string
-func (o *LogoutURL) String() string {
+func (o *GetUserURL) String() string {
 	return o.Must(o.Build()).String()
 }
 
 // BuildFull builds a full url with scheme, host, path and query string
-func (o *LogoutURL) BuildFull(scheme, host string) (*url.URL, error) {
+func (o *GetUserURL) BuildFull(scheme, host string) (*url.URL, error) {
 	if scheme == "" {
-		return nil, errors.New("scheme is required for a full url on LogoutURL")
+		return nil, errors.New("scheme is required for a full url on GetUserURL")
 	}
 	if host == "" {
-		return nil, errors.New("host is required for a full url on LogoutURL")
+		return nil, errors.New("host is required for a full url on GetUserURL")
 	}
 
 	base, err := o.Build()
@@ -82,6 +97,6 @@ func (o *LogoutURL) BuildFull(scheme, host string) (*url.URL, error) {
 }
 
 // StringFull returns the string representation of a complete url
-func (o *LogoutURL) StringFull(scheme, host string) string {
+func (o *GetUserURL) StringFull(scheme, host string) string {
 	return o.Must(o.BuildFull(scheme, host)).String()
 }
